--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,106 +1,121 @@
 {
   "app": {
-    "name": "Tasty Bites",
-    "welcome": "Welcome to Tasty Bites",
-    "tagline": "Delicious food delivered fast"
+    "name": "Bocado Sabroso",
+    "welcome": "Bienvenido a",
+    "welcometo": "Bienvenido a",
+    "tagline": "Comida deliciosa entregada rápido"
   },
   "home": {
-    "search": "Search for food...",
-    "currentLocation": "Current Location",
-    "offers": "Offers",
-    "pickup": "Pick-up",
-    "delivery": "Delivery",
-    "vouchers": "Vouchers",
-    "seeAll": "See All",
-    "orderNow": "Order Now",
-    "discountMessage": "Don't Miss Out {{percent}}% Off Today.",
-    "freeDelivery": "Free Delivery",
-    "getStarted": "Get Started"
+    "search": "Busca comida...",
+    "welcity": "Relájate y elige lo que más te guste.",
+    "currentLocation": "Ubicación actual",
+    "offers": "Ofertas",
+    "pickup": "Recoger",
+    "delivery": "Entrega",
+    "vouchers": "Vales",
+    "seeAll": "Ver todo",
+    "orderNow": "Ordena ahora",
+    "discountMessage": "No te pierdas hoy {{percent}} % de descuento.",
+    "freeDelivery": "Entrega gratis",
+    "getStarted": "Comienza ahora",
+    "comingSoon": "¡Próximamente!",
+    "chooseMenu": "Personaliza tu experiencia gastronómica"
   },
   "about": {
-    "title": "Our Story",
-    "welcome": "Welcome To Beach Club",
-    "description1": "Nestled in Marina du Marchica, the Beach Club is a Café-Restaurant that offers a friendly setting, ideal for working, relaxing, and cocooning with family or friends.",
-    "description2": "It was created with care and attentive design to satisfy both young and old (play area, Mosque...). Its strategic location in the center of the prestigious Marchica project offers a panoramic view, overlooking the golf course, the magnificent beach of Nador, and its beautiful mountains. Its gastronomic menu offers a variety of cuisine prepared with love.",
-    "closing": "We wish you a pleasant time in our company.",
-    "location": "Location",
-    "contact": "Contact",
-    "hours": "Opening Hours",
-    "hours_value": "Daily: 9:00 AM - 11:00 PM",
-    "email": "Email"
+    "title": "Nuestra historia",
+    "welcome": "Bienvenido al Beach Club",
+    "description1": "Ubicado en Marina du Marchica, el Beach Club es un café‑restaurante que ofrece un ambiente acogedor, ideal para trabajar, relajarse o compartir con familia o amigos.",
+    "description2": "Fue creado con esmero y diseño atento para satisfacer a jóvenes y mayores (zona de juegos, mezquita...). Su ubicación estratégica en el centro del prestigioso proyecto Marchica ofrece vistas panorámicas al campo de golf, la magnífica playa de Nador y sus hermosas montañas. Su menú gastronómico ofrece una variedad de cocina preparada con amor.",
+    "closing": "Te deseamos un agradable momento en nuestra compañía.",
+    "location": "Ubicación",
+    "contact": "Contacto",
+    "hours": "Horario",
+    "hours_value": "Diario: 9:00 AM – 11:00 PM",
+    "email": "Correo electrónico"
   },
   "categories": {
-    "our_menu": "Our Menu",
-    "burger": "Burgers",
+    "our_menu": "Nuestro menú",
+    "burger": "Hamburguesas",
     "pizza": "Pizza",
     "pasta": "Pasta",
-    "salad": "Salads",
-    "dessert": "Desserts",
-    "drinks": "Drinks",
-    "chicken": "Chicken",
-    "seafood": "Seafood"
+    "salad": "Ensaladas",
+    "dessert": "Postres",
+    "drinks": "Bebidas",
+    "chicken": "Pollo",
+    "seafood": "Mariscos"
   },
   "types": {
-    "classic_burgers": "Classic Burgers",
-    "chicken_burgers": "Chicken Burgers",
-    "specialty_burgers": "Specialty Burgers",
-    "traditional_pizza": "Traditional Pizza",
-    "specialty_pizza": "Specialty Pizza",
-    "spaghetti": "Spaghetti",
+    "classic_burgers": "Hamburguesas clásicas",
+    "chicken_burgers": "Hamburguesas de pollo",
+    "specialty_burgers": "Hamburguesas especiales",
+    "traditional_pizza": "Pizza tradicional",
+    "specialty_pizza": "Pizza especial",
+    "spaghetti": "Espaguetis",
     "penne": "Penne",
-    "lasagna": "Lasagna",
+    "lasagna": "Lasaña",
     "risotto": "Risotto",
-    "fresh_salads": "Fresh Salads",
-    "protein_salads": "Protein Salads",
-    "cakes": "Cakes",
-    "ice_cream": "Ice Cream",
-    "pastries": "Pastries",
-    "hot_drinks": "Hot Drinks",
-    "cold_drinks": "Cold Drinks",
+    "fresh_salads": "Ensaladas frescas",
+    "protein_salads": "Ensaladas proteicas",
+    "cakes": "Pasteles",
+    "ice_cream": "Helado",
+    "pastries": "Pastelería",
+    "hot_drinks": "Bebidas calientes",
+    "cold_drinks": "Bebidas frías",
     "smoothies": "Smoothies",
-    "cocktails": "Cocktails",
-    "fried_chicken": "Fried Chicken",
-    "grilled_chicken": "Grilled Chicken",
-    "fish": "Fish",
-    "shellfish": "Shellfish"
+    "cocktails": "Cócteles",
+    "fried_chicken": "Pollo frito",
+    "grilled_chicken": "Pollo a la parrilla",
+    "fish": "Pescado",
+    "shellfish": "Mariscos"
   },
   "menu": {
-    "searchInCategory": "Search in {{category}}...",
+    "searchInCategory": "Buscar en {{category}}...",
     "addToCart": "Guardar",
     "inToCart": "Guardado",
-    "price": "Price",
-    "calories": "Calories",
-    "protein": "Protein",
-    "fat": "Fat",
-    "variation": "Variation",
-    "reviews": "Reviews",
-    "mad": "MAD"
+    "price": "Precio",
+    "calories": "Calorías",
+    "protein": "Proteína",
+    "fat": "Grasas",
+    "variation": "Variación",
+    "menu1": "MENÚ NORSAL",
+    "menu2": "MENÚ TERRAZA",
+    "section": "Selección de menú",
+    "mad" : "MAD"
+
   },
   "search": {
-    "results": "Search Results",
-    "no_results": "No results found",
-    "categories": "Categories",
-    "view_all": "View all {{count}} results"
+    "results": "Resultados de búsqueda",
+    "no_results": "No se encontraron resultados",
+    "categories": "Categorías",
+    "view_all": "Ver todos los resultados ({{count}})"
   },
   "cart": {
-    "title": "Your Cart",
-    "empty": "Your cart is empty",
+    "title": "Tu pedido",
+    "empty": "Tu pedido está vacío",
     "total": "Total",
-    "checkout": "Checkout",
-    "remove": "Remove",
-    "continueShopping": "Continue Shopping"
+    "checkout": "Realizar pedido",
+    "remove": "Eliminar",
+    "continueShopping": "Volver al menú"
   },
   "language": {
-    "title": "Select Language",
-    "english": "English",
-    "french": "French",
-    "arabic": "Arabic"
+    "title": "Seleccionar idioma",
+    "english": "Inglés",
+    "french": "Francés",
+    "arabic": "Árabe"
   },
-  "footer": {
-    "home": "Home",
-    "menu": "Menu",
-    "language": "Language",
-    "cart": "Cart",
-    "about": "About"
+  "errors": {
+    "title": "¡Vaya! Algo salió mal",
+    "cityNotFound": "Ciudad no encontrada",
+    "menuLoadFailed": "Error al cargar el menú"
+  },
+  "common": {
+    "goHome": "Ir al inicio",
+    "logoAlt": "Logotipo de la empresa",
+    "loading": "Cargando..."
+  },
+  "comingSoon": {
+    "title": "¡Próximamente!",
+    "description": "Estamos preparando algo increíble para ti",
+    "openingDate": "Fecha de apertura"
   }
 }
