update some thing now 22/06

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -80,7 +80,10 @@
     "menu1": "قائمة نورسال",
     "menu2": "قائمة التراس",
     "section": "اختيار القائمة",
-   "mad": "درهم"
+    "mad": "درهم",
+    "untitledDish": "طبق بدون عنوان",
+    "noDescription": "لا يوجد وصف متاح",
+    "dishImage": "صورة الطبق"
   },
   "search": {
     "results": "نتائج البحث",
